# Chess-Project

./: .gitignore  .swp  Chess Logic Documentation.docx  Project Book.docx  README.md  crop.py  main.py  הערות של ספרים.docx  רשימת רכיבים.xlsx  תשובות לשאלות מגן.docx
Arduino-Chess/: Arduino-Chess.ino
Arduino-Chess/ESP-Chess/: ESP-Chess.ino
Arduino-Chess/sketch_apr19a/: sketch_apr19a.ino
Automatic_Chessboard/: Automatic_Chessboard.ino
Chess Project/: Bishop.cpp  Board.cpp  Board.h  CPipeServer.cpp  CPipeServer.h  Chess Project.sln  Chess Project.vcxproj  Chess Project.vcxproj.filters  EmptySquare.cpp  EmptySquare.h  HandleGame.cpp  HandleGame.h  King.h  Pawn.h  Piece.h  PipeConst.h  Queen.cpp  Server.cpp  Server.h  Source.cpp  WSAInitializer.h
Chess Project/x64/Debug/: Chess Project.ilk  Chess Project.vcxproj.FileListAbsolute.txt  vc142.idb
Chess-AI/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  CPipeClient.cpp  CPipeClient.h  Client.cpp  Client.h  EmptySquare.cpp  EmptySquare.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PipeConst.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  WSAInitializer.cpp
ESP-Chess/: ESP-Chess.ino
Python-Chess/: Valorant_2021.06.12_-_12.20.20.01.mkv  arduino.py  chess.wmv  crop.py  main.py  pipe.py  socketlib.py  test.py
chess-ai/: Evaluate.cpp  Evaluate.h  chees-ai.vcxproj  chees-ai.vcxproj.filters  chess-ai.sln  main.cpp
pipes/PipeClient Source/pipeClient/: CPipeClient.cpp  CPipeClient.h  PipeClient.cpp  PipeConst.h  pipeClient.sln  pipeClient.vcxproj  pipeClient.vcxproj.filters
(+14 files in other folders)
